@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2010-06-01"
+.TH VOIKKOSPELL 1 "2012-02-27"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -31,7 +31,10 @@ Common options of different Voikko test programs are listed in COMMON OPTIONS.
 .SH OPTIONS
 .TP
 .B \-m
-Prints morphological analysis info (A:) for recognized words.
+In addition to spelling result, prints morphological analysis info (A:) for recognized words.
+.TP
+.B \-M
+Prints morphological analysis info (A:) for recognized words without displaying spelling result.
 .TP
 .B \-t
 Prints only "C" or "W" instead of typical full output.
