@@ -1,3 +1,7 @@
+2012-02-27 Harri Pitkänen <hatapitk@iki.fi>
+	* Add new option to voikkospell: -M for morphological analysis without
+	  spell checking.
+
 2012-02-12 Harri Pitkänen <hatapitk@iki.fi>
 	* Added initial VFST lookup code.
 
